# REFACTOR

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: documentation_workspace.md  inbox_outbox_policy.md  operating_ceremonies.md  phase1_backlog.md  program_charter.md  raci_matrix.md  risk_register.md  sla_dashboard_skeleton.md  telemetry_plan.md  work_breakdown_structure.md
inbox/: Phase_0_Governance_Approvals_Log.md  Phase_0_Governance_Ceremony_Schedule.md  Phase_0_Governance_Documentation_Space.md  Phase_0_Governance_RACI.md  Phase_0_Program_Charter.md  Phase_0_Program_Spin_Up.md  Phase_1_Reframer_Tokenization_Distinction.md  Phase_2_Relation_Fabric_Retrieval.md  Phase_3_Transformation_Core_MoE.md  Phase_4_Memory_System_Long_Term_Stores.md  Phase_5_Training_Stack_Optimization.md  Phase_6_Serving_Safety_Operations.md  Phase_7_Post_Launch_Evolution.md
specification/: REFRACTOR_Implementation_Plan.md  REFRACTOR_SPEC.md
specification/phase0/: Inbox_Outbox_Workflow.md  Phase1_Backlog_Seed.md  Risk_Register.md  SLA_Dashboard_Skeleton.md  Work_Breakdown_Structure.md
specification/phase1/: Reframer_Service.md
specification/phase1/fixtures/: README.md
src/refactor/: __init__.py
src/refactor/telemetry/: __init__.py  heartbeat.py
src/refactor/tokenizer/: __init__.py  codec.py
tests/: test_heartbeat.py  test_tokenizer.py
tools/: secrets_template.env
