[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "refactor"
version = "0.0.1"
description = "REFRACTOR engineering foundations package"
authors = [{name = "REFRACTOR Program", email = "eng@refactor.local"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "black>=24.3.0",
  "ruff>=0.1.9",
  "mypy>=1.8.0",
  "pytest>=7.4.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
